BR: fix scrollbar

--- a/BorderRadiant/scss/_main.scss
+++ b/BorderRadiant/scss/_main.scss
@@ -685,7 +685,8 @@
 }
 
 // Scrollbars
-.scrollerBase-1Pkza4::-webkit-scrollbar-thumb {
+.scrollerBase-1Pkza4::-webkit-scrollbar-thumb,
+.scrollerBase-1Pkza4::-webkit-scrollbar-track {
     border-radius: 0;
 }
 
